--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.3.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "prisma-generator-nestjs-dto": "^1.1.4",
     "reflect-metadata": "^0.2.0",
