--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "^6.3.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "prisma-generator-nestjs-dto": "^1.1.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
